# ChangeLog for dev-python/vanity
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> vanity-1.1.2.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> vanity-1.1.2.ebuild:
  Switched to EAPI4.

  16 Jan 2012; James Rowe <jnrowe@gmail.com> -vanity-1.1.0.ebuild,
  vanity-1.1.2.ebuild:
  Keyworded x86.

  16 Jan 2012; James Rowe <jnrowe@gmail.com> vanity-1.1.2.ebuild:
  Keyworded amd64.

*vanity-1.1.2 (17 Dec 2011)

  17 Dec 2011; James Rowe <jnrowe@gmail.com> +vanity-1.1.2.ebuild:
  Version bump [511].

  25 Nov 2011; James Rowe <jnrowe@gmail.com> -vanity-1.0.ebuild,
  vanity-1.1.0.ebuild:
  Keyworded x86.

  25 Nov 2011; James Rowe <jnrowe@gmail.com> vanity-1.1.0.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*vanity-1.1.0 (26 Oct 2011)

  26 Oct 2011; James Rowe <jnrowe@gmail.com> +vanity-1.1.0.ebuild:
  Version bump [493].

  16 Jun 2011; James Rowe <jnrowe@gmail.com> vanity-1.0.ebuild:
  Keyworded x86.

  12 Jun 2011; James Rowe <jnrowe@gmail.com> vanity-1.0.ebuild:
  Keyworded amd64.

  18 May 2011; James Rowe <jnrowe@gmail.com> vanity-1.0.ebuild:
  Keyworded ~x86.

  16 May 2011; James Rowe <jnrowe@gmail.com> watch:
  Fixed cupage matcher.

*vanity-1.0 (12 May 2011)

  12 May 2011; James Rowe <jnrowe@gmail.com> +vanity-1.0.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, by me [337].
