@@ -26,9 +26,3 @@ DOCS=(README.rst docs/HISTORY.txt)
 python_install_all() {
 	python-distutils-ng_redoscript "/usr/bin/${PN}"
 }
-
-src_install() {
-	default
-
-	python-distutils-ng_src_install
-}
